--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
+    "@types/react-router-dom": "^5.1.2",
     "core-js": "^3.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
