--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,14 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
-        "noImplicitAny": true,
-        "removeComments": true,
-        "preserveConstEnums": true,
-        "esModuleInterop": true,
-        "jsx": "react",
-        "sourceMap": true
-    }
+        "target": "es5",                          
+        "module": "commonjs",                     
+        "lib": ["dom"],                             
+        "jsx": "react",                     
+        "sourceMap": true,                     
+        "outDir": "./public",                      
+        "noImplicitAny": true,                 
+        "esModuleInterop": true,                   
+    },
+    "include": ["src/*"],
+    "exclude": ["node_modules"]
 }
